--- a/css/test1.css
+++ b/css/test1.css
@@ -1,76 +1,91 @@
 
-<!--标题模式-->
 
+
+<!--标题模式--> 
 
 body{
-	
-	background: white;
-	font-family: georgia, garamond,serif; 
+	/*background: white;*/
+	/*设置背景图片：这里用的是绝对地址：完全写好的绝对地址*/
+	background: url(../img/silverware.jpg);
+	/*图片的重复方式，水平竖直都重复*/
+	background-repeat:repeat-x,repeat-y;
+	/*图片不会移动，即使整个界面上下滚动*/
+	background-attachment: fixed;
+	/*设置字体家族，浏览器会依次的从前面开始查找自己能用的字体*/
+	font-family: georgia, garamond, serif;
+	/*设置字体大小*/
 	font-size: 11pt;
-	foreground:#A4A400;
+	/*前景色：目前认为前景色就是我们的字体颜色*/
+	foreground: #A4A400;
+}
+
+.headings {
+	background: #F0F0F0;
+	font-family: "century gothic", futura, verdana, sans-serif;
+	font-size: 22pt;
+	color: #A4A400;
+	font-weight: bold;
+	text-decoration: underline;
+	text-align: center;
 	
+	/*字符间距*/
+	letter-spacing: 0.2em;
 }
 
-.headings{
-	background: #F0F0F0; 
-    font-family: "century gothic",futura,verdana,sans-serif;
-    font-size: 22pt ;
-    color: #A4A400;
-    font-weight:bold;
-    text-decoration: underline; 
-    text-align: center;
+.otherheading {
+	background: #F0F0F0;
+	font-size: 18pt;
+	color: #A4A400;
+	text-decoration: underline;
+	letter-spacing: 0.2em;
 }
 
-.otherheading{
-	background: #F0F0F0; 
-    font-size: 18pt ;
-    color: #A4A400;
-    text-decoration: underline; 
-}
-
-
-
-.olnonestyle{
+.olnonestyle {
 	padding: 0;
 	margin: 0;
-	font-family: georgia, garamond,serif; 
+	font-family: georgia, garamond, serif;
 	font-size: 11pt;
 	list-style: none;
+	
 }
 
-.oldiamstyle{
-	list-style: diam;
-}
 /*
  用户评价样式
  * */
+
 .userComment {
 	background: ;
-	font:italic;
+	font: italic;
 	background: #FFFC8;
 }
 
 /**
  * 引用
  */
-.blockquote_style{
-	font-family: georgia, garamond,serif; 
+
+.blockquote_style {
+	font-family: georgia, garamond, serif;
 	font-size: 11pt;
 	font-style: italic;
 	background: #FFFFC8;
 }
+
 /*
  linkfont sytle   
  
  attention: don not use font again ,it is not used from html4
  use font-family and font sytle  to set the styel of front
  * */
-.linkfont_style{
-	font-family: georgia, garamond,serif; 
+
+.linkfont_style {
+	font-family: georgia, garamond, serif;
 	font-size: 11pt;
 	color: #A4A400;
-    text-decoration: underline;
+	text-decoration: underline;
 }
 
-
-
+.ulicon li{
+	font-family: georgia,garamond,serif;
+	font-size: 11pt;
+    list-style: url(../img/pie_icon.gif) outside circle;
+}
