--- a/css/movie.css
+++ b/css/movie.css
@@ -3,6 +3,7 @@ body{
 	font-family: verdana,tahoma,sans-serif;
 	margin: 0;
 	padding: 0;
+	font-size: 8pt;
 }
 /**{
 	border:2px #f00 solid;
@@ -19,7 +20,6 @@ body{
 	 width: 47%;
 	 margin-left: 2%;
 	 margin-right: 2%; 
-	 /*margin-top: 3em;*/
 	 display: inline-block;
 	 float: left;
 }
@@ -28,7 +28,6 @@ body{
 	width: 47%; 
 	margin-right: 2%;
 	float: left;
-	/*margin-top: 3em;*/
 	display: inline-block;
 }
 
@@ -40,26 +39,14 @@ body{
 	font-weight: bold;
 }
 
-.imgquote{
+.commentquote img{
 	margin-right: 5px;
 	float: left;
-}
-
-.imgcritic{
-	margin-right: 5px;
-	float: left;
-}
-
-.criticperson{
-	float: left; 
-	font-style:italic;
-	margin-top: 0%;
-	font-size: 8pt;
 }
 
 
 .singlecomment{
-	/*margin-bottom: 3em;*/
+	margin-bottom: 3em;
 }
 
 
@@ -108,6 +95,7 @@ body{
     background: #A2B964;
     height: 20px;
     clear: both;
+    margin-bottom: 0px;
 }
 
 #bottombar:after{
@@ -116,5 +104,14 @@ body{
 	width:0px;
 	height: 0px;
 	visibility: hidden;
+}
 
+.commentor img{
+	margin-right: 5px;
+	float: left;
+	display: inline-block;
+}
+
+.commentor {
+	font-style: italic;
 }
